--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <br>
     <hr>  <!– horizantal rule yaptık. İlkel bir websitesi yapıyoruz. –>
     <br>
-    <img src="C:\Users\bilay\Desktop\uygulama\pic\bick.jpg", "alt=picture", title= "Büşra İlayda Çevik Köken", width="300" height="300">
+    <img src="C:\Users\bilay\Desktop\website2\pic\bick.jpg", "alt=picture", title= "Büşra İlayda Çevik Köken", width="300" height="300">
     <br>
     
 
