--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <br>
     <hr>  <!– horizantal rule yaptık. İlkel bir websitesi yapıyoruz. –>
     <br>
-    <img src="C:\Users\bilay\Desktop\website2\pic\bick.jpg", "alt=picture", title= "Büşra İlayda Çevik Köken", width="300" height="300">
+    <img src="https://github.com/Bilaydacevik/Bilaydacevikkoken.github.io/blob/main/pic/bick.jpg?raw=true", "alt=picture", title= "Büşra İlayda Çevik Köken", width="300" height="300">
     <br>
     
 
