--- a/iletisim.html
+++ b/iletisim.html
@@ -20,7 +20,7 @@
    <p> Ankara/Türkiye </p>
    <br>
    <h2>İletişim Bilgileri</h2>
-   <p>E-mail: bilaydacevik@hotmail.com </p>
+   <p>E-mail:  </p>
    <hr>
    <br>
    <form name= "email" accept="email.php" method="GET" >
