--- a/yazılarım.html
+++ b/yazılarım.html
@@ -18,6 +18,7 @@
     <hr>  <!– horizantal rule yaptık. İlkel bir websitesi yapıyoruz. –>
    
     </center>
+	 <a href="css1.html"> CSS Kutu Modeli1 </a>
 
 
 </nav>
