--- a/css1.html
+++ b/css1.html
@@ -1,22 +1,29 @@
-BTK Akademi, HTML5 ile Web Geliştirme dersinden edindiğim notları paylaşıyorum.
+<!DOCTYPE html>
+<html>
 
-İçerik Nelerdir?
 
-CSS Kutu modeli nedir?
-Kutu Boyutu ve Aralık Ayarlamaları
-Kutu Kenarlık Ayarları
-Kutu Rengi ve Ardalan Ayarları
-Ardalan Resminin Konum Ayarları
-Kutu Davranışını Değiştirme
 
-Css HTML komutlarını bir kutu olarak görür.
+<i> BTK Akademi, HTML5 ile Web Geliştirme dersinden edindiğim notları paylaşıyorum. </i>
+<br>
+<b> İçerik Nelerdir? </b>
+<br> <ul>
+<li>CSS Kutu modeli nedir?</li>
+<li>Kutu Boyutu ve Aralık Ayarlamaları</li>
+<li>Kutu Kenarlık Ayarları</li>
+<li>Kutu Rengi ve Ardalan Ayarları</li>
+<li> Ardalan Resminin Konum Ayarları</li>
+<li> Kutu Davranışını Değiştirme</li>
+</ol>
 
-CSS’e birer kutu gibi görünen HTML komutları içerik, iç-aralık (padding), kenarlık ve dış aralıktan (margin) oluşmaktadır.
+Css HTML komutlarını bir kutu olarak görür. <br>
 
-https://www.btkakademi.gov.tr/portal/course/player/deliver/html5-ile-web-gelistirme-13200
-Kenarlık-dış nesneler ile: marjin
-içerik ile kenarlık aralığı: padding
-Block ve Inline Komutlar
+CSS’e birer kutu gibi görünen HTML komutları içerik, iç-aralık (padding), kenarlık ve dış aralıktan (margin) oluşmaktadır.<br>
+
+Kenarlık ve dış nesneler ile aradaki boşluk marjin ile. <br> 
+içerik ile kenarlık aralığı: padding ile. <br>
+
+
+<b> Block ve Inline Komutlar </b>
 
 Kutu modelinde bazı komutlar block bazıları ise inline olarak çalışır.
 
@@ -102,3 +109,5 @@ li{display:inline;}
 a{display:block;}
 </style>
 Şimdilik bu kadar. Bu yazı iki bölümden oluşacak. Bir sonraki yazıda görüşmek üzere!
+
+</html>
