--- a/css1.html
+++ b/css1.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
-<html>
-
-
+<html lang="=tr">
+<head 1
+<meta charset="utf-8">
+<title> BTK Akademi, HTML5 notları</title>
+</head>
+<body>
 
 <i> BTK Akademi, HTML5 ile Web Geliştirme dersinden edindiğim notları paylaşıyorum. </i>
 <br>
 <b> İçerik Nelerdir? </b>
 <br> <ul>
-<li>CSS Kutu modeli nedir?</li>
-<li>Kutu Boyutu ve Aralık Ayarlamaları</li>
-<li>Kutu Kenarlık Ayarları</li>
-<li>Kutu Rengi ve Ardalan Ayarları</li>
+<li> CSS Kutu modeli nedir?</li>
+<li> Kutu Boyutu ve Aralık Ayarlamaları</li>
+<li> Kutu Kenarlık Ayarları</li>
+<li> Kutu Rengi ve Ardalan Ayarları</li>
 <li> Ardalan Resminin Konum Ayarları</li>
 <li> Kutu Davranışını Değiştirme</li>
-</ol>
+</ul>
 
 Css HTML komutlarını bir kutu olarak görür. <br>
 
@@ -25,11 +28,9 @@ içerik ile kenarlık aralığı: padding ile. <br>
 
 <b> Block ve Inline Komutlar </b>
 
-Kutu modelinde bazı komutlar block bazıları ise inline olarak çalışır.
-
-hx, tavle, p gibi blok olarak çalışan komutlar tüm satırı kaplar. (block)
-a,b, em, img gibi komutlar ise sadece bulundukları alanı kaplar. (inline)
-— — — — — — — — — — — — — — — — — — — — — — — — — — — — — — — — — — — — — —
+<p>Kutu modelinde bazı komutlar block bazıları ise inline olarak çalışır. hx, tavle, p gibi blok olarak çalışan komutlar tüm satırı kaplar. (block)
+a,b, em, img gibi komutlar ise sadece bulundukları alanı kaplar. (inline) </p>
+<hr>
 
 Kutu bir div tagı olabilir, h1,h2 gibi başlık etiketleri olabilir. Kutuların kenarları görünmez çünkü standartta null olarak işaretlidir. Genişlik, boy ayarlamasını style etiketi içerisinde yapabiliriz.
 
