--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <title> Büşra İlayda Çevik Köken'in Kişisel Sitesi </title>
 <meta name="description" content="Büşra İlayda Çevik Köken'in Kişisel Web Sitesi"
 <meta name="keywords" content=""ilayda, çevik, köken, web, site">
-    </head>
+<link rel="stylesheet" href="style.css">   
+</head>
     <body>
 <nav>
     <center> 
@@ -17,19 +18,17 @@
     <br>
     <hr>  <!– horizantal rule yaptık. İlkel bir websitesi yapıyoruz. –>
     <br>
-    <img src="https://github.com/Bilaydacevik/Bilaydacevikkoken.github.io/blob/main/pic/bick.jpg?raw=true", "alt=picture", title= "Büşra İlayda Çevik Köken", width="300" height="300">
+    <img id="pic" src="https://github.com/Bilaydacevik/Bilaydacevikkoken.github.io/blob/main/pic/bick.jpg?raw=true", "alt=picture", title= "Büşra İlayda Çevik Köken", width="300" height="300">
     <br>
-    
-    <link rel="stylesheet" href="style.css">
-</head>
+</nav>
+<br><hr>
 
-<body>
     <div class="container">
-    <div class="panel active" style="background-image: url('https://img.freepik.com/free-psd/cosmos-flower-isolated-transparent-background_191095-33363.jpg');"> <h3>cosmos flower</h3></div>
-    <div class="panel" style="background-image: url('https://img.freepik.com/free-psd/magnolia-flower-isolated-transparent-background_191095-33409.jpg');"> <h3>magnolia flower</h3></div>
-    <div class="panel" style="background-image: url('https://img.freepik.com/free-psd/bougainvillea-flower-isolated-transparent-background_191095-33338.jpg');"> <h3> <font color= "black">  bougainvillea flower</h3></div> </font>
-    <div class="panel" style="background-image: url('https://img.freepik.com/free-photo/beautiful-watercolor-floral-arrangement_23-2151499553.jpg');"> <h3> <font color= "white">watercolor flower</h3></div> </font>
-    <div class="panel" style="background-image: url('https://img.freepik.com/free-photo/surreal-neon-tropical-flowers_23-2151665774.jpg');"> <h3 align="justify"> <font color= "white">  neon tropical flower</div></h3> </font>
+    <div class="panel active" style="background-image: url('https://img.freepik.com/free-psd/cosmos-flower-isolated-transparent-background_191095-33363.jpg');"> </div>
+    <div class="panel" style="background-image: url('https://img.freepik.com/free-psd/magnolia-flower-isolated-transparent-background_191095-33409.jpg');"> </div>
+    <div class="panel" style="background-image: url('https://img.freepik.com/free-psd/bougainvillea-flower-isolated-transparent-background_191095-33338.jpg');"> </div>
+    <div class="panel" style="background-image: url('https://img.freepik.com/free-photo/beautiful-watercolor-floral-arrangement_23-2151499553.jpg');"> </div>
+    <div class="panel" style="background-image: url('https://img.freepik.com/free-photo/surreal-neon-tropical-flowers_23-2151665774.jpg');"> </div>
 
 </div>
 
@@ -37,6 +36,6 @@
 
     </center>
 
-</nav>
+
     </body>
 </html>
